--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
         <p>Welcome to the oficial Space Game site!</p>
+        <p>Welcome to the oficial000 Space Game site!</p>
     </div>
 </section>
 <section class="download">
